[project]
name = "server-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=4.0.0",
    "python-telegram-bot>=22.5",
    "rich>=14.2.0",
    "telegram>=0.0.1",
    "tomli-w>=1.2.0",
    "tomli>=2.0.1",
]
